--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ dev = [
     "uvicorn (>=0.34.2,<0.35.0)",
     "pre-commit (>=4.2.0,<5.0.0)",
     "bm25s (>=0.2.13,<0.3.0)",
+    "ruff>=0.12.2",
 ]
 
 [project.scripts]
@@ -69,3 +70,8 @@ testpaths = ["tests"]
 omit = [
     "nomos/api/*"
 ]
+
+[tool.ruff]
+lint.select = ["I"]
+exclude = ["cookbook/"]
+line-length = 100
