--- a/.github/workflows/lint-n-type.yml
+++ b/.github/workflows/lint-n-type.yml
@@ -15,11 +15,18 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.9'
+          python-version: '3.10'
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
+        with:
+          enable-cache: true
+
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install pre-commit
-          pip install -e .[cli,openai,mistralai,gemini,traces]
-      - name: Run pre-commit
-        run: pre-commit run --all-files
+        run: uv sync
+
+      - name: Run Ruff Check
+        run: uv run ruff check
+
+      - name: Run Ruff format
+        run: uv run ruff format --check
