--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,10 @@ mistralai = ["mistralai (>=1.7.0,<2.0.0)"]
 google = ["google-genai (>=1.12.1,<2.0.0)"]
 ollama = ["ollama (>=0.5.1)"]
 huggingface = ["huggingface_hub (>=0.32.0)"]
+groq = [
+    "groq (>=0.29.0)",
+    "instructor (>=1.9.2)",
+]
 traces = [
     "opentelemetry-api (>=1.33.0,<2.0.0)",
     "opentelemetry-sdk (>=1.33.0,<2.0.0)",
