--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ dependencies = [
 requires = ["hatchling >=1.9.0,<2.0.0"]
 build-backend = "hatchling.build"
 
-[dependency-groups]
+[project.optional-dependencies]
 cli = [
     "typer (>=0.16.0,<0.17.0)",
     "rich (>=13.0.0,<14.0.0)",
@@ -45,17 +45,15 @@ serve = [
     "sqlmodel (>=0.0.24,<0.0.25)",
     "asyncpg (>=0.30.0,<0.31.0)",
     "psycopg2-binary (>=2.9.10,<3.0.0)",
+    "kafka-python>=2.2.15",
 ]
+
+[dependency-groups]
 dev = [
     "pytest (>=8.3.5,<9.0.0)",
     "pytest-cov (>=6.1.1,<7.0.0)",
     "pytest-asyncio (>=0.26.0,<0.27.0)",
-    "sqlmodel (>=0.0.24,<0.0.25)",
-    "redis (>=6.0.0,<7.0.0)",
-    "fastapi (>=0.115.12,<0.116.0)",
-    "uvicorn (>=0.34.2,<0.35.0)",
     "pre-commit (>=4.2.0,<5.0.0)",
-    "bm25s (>=0.2.13,<0.3.0)",
     "ruff>=0.12.2",
 ]
 
