--- a/cookbook/examples/barista/docker-compose.yml
+++ b/cookbook/examples/barista/docker-compose.yml
@@ -1,28 +1,21 @@
 version: '3.8'
 services:
-  barista-agent:
-    build: .
-    ports:
-      - "8000:8000"
-    environment:
-      OPENAI_API_KEY: ${OPENAI_API_KEY}
-      SESSION_STORE: production
-      DATABASE_URL: postgresql+asyncpg://nomos:nomos@postgres/nomos
-      REDIS_URL: redis://redis:6379/0
-      KAFKA_BROKERS: kafka:9092
-      SESSION_EVENTS: "true"
-    depends_on:
-      - postgres
-      - redis
-      - kafka
-    restart: unless-stopped
-    # Add healthcheck to wait for dependencies
-    healthcheck:
-      test: ["CMD-SHELL", "python -c 'import urllib.request; urllib.request.urlopen(\"http://localhost:8000/\", timeout=5)'"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
+  # barista-agent:
+  #   build: .
+  #   ports:
+  #     - "8000:8000"
+  #   environment:
+  #     OPENAI_API_KEY: ${OPENAI_API_KEY}
+  #     SESSION_STORE: production
+  #     DATABASE_URL: postgresql+asyncpg://nomos:nomos@postgres/nomos
+  #     REDIS_URL: redis://redis:6379/0
+  #     KAFKA_BROKERS: kafka:9092
+  #     SESSION_EVENTS: "true"
+  #   depends_on:
+  #     - postgres
+  #     - redis
+  #     - kafka
+  #   restart: unless-stopped
   postgres:
     image: postgres:15
     ports:
@@ -41,6 +34,8 @@ services:
       retries: 5
   redis:
     image: redis:7-alpine
+    ports:
+      - "6379:6379"
     volumes:
       - redis_data:/data
     restart: unless-stopped
@@ -57,7 +52,7 @@ services:
       KAFKA_CFG_PROCESS_ROLES: controller,broker
       KAFKA_CFG_CONTROLLER_QUORUM_VOTERS: 0@kafka:9093
       KAFKA_CFG_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093
-      KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
       KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
       KAFKA_CFG_CONTROLLER_LISTENER_NAMES: CONTROLLER
       KAFKA_CFG_INTER_BROKER_LISTENER_NAME: PLAINTEXT
