--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "pydantic-settings (>=2.9.1,<3.0.0)",
     "docstring-parser (>=0.16,<0.17)",
     "colorama (>=0.4.6,<0.5.0)",
+    "greenlet>=3.2.3",
 ]
 
 
