--- a/cookbook/examples/barista/docker-compose.yml
+++ b/cookbook/examples/barista/docker-compose.yml
@@ -1,21 +1,20 @@
-version: '3.8'
 services:
-  # barista-agent:
-  #   build: .
-  #   ports:
-  #     - "8000:8000"
-  #   environment:
-  #     OPENAI_API_KEY: ${OPENAI_API_KEY}
-  #     SESSION_STORE: production
-  #     DATABASE_URL: postgresql+asyncpg://nomos:nomos@postgres/nomos
-  #     REDIS_URL: redis://redis:6379/0
-  #     KAFKA_BROKERS: kafka:9092
-  #     SESSION_EVENTS: "true"
-  #   depends_on:
-  #     - postgres
-  #     - redis
-  #     - kafka
-  #   restart: unless-stopped
+  barista-agent:
+    build: .
+    ports:
+      - "8000:8000"
+    environment:
+      OPENAI_API_KEY: ${OPENAI_API_KEY}
+      SESSION_STORE: production
+      DATABASE_URL: postgresql+asyncpg://nomos:nomos@postgres/nomos
+      REDIS_URL: redis://redis:6379/0
+      KAFKA_BROKERS: kafka:9092
+      SESSION_EVENTS: "true"
+    depends_on:
+      - postgres
+      - redis
+      - kafka
+    restart: unless-stopped
   postgres:
     image: postgres:15
     ports:
