--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "docstring-parser (>=0.16,<0.17)",
     "colorama (>=0.4.6,<0.5.0)",
     "greenlet>=3.2.3",
+    "numpy>=2.2.6",
 ]
 
 
