--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,7 @@ dev = [
     "pytest-asyncio (>=0.26.0,<0.27.0)",
     "pre-commit (>=4.2.0,<5.0.0)",
     "ruff>=0.12.2",
+    "pytest-xdist>=3.8.0",
 ]
 
 [project.scripts]
