refactor: standardize flow configuration field names and enhance flow model

--- a/cookbook/examples/barista/config.agent.yaml
+++ b/cookbook/examples/barista/config.agent.yaml
@@ -68,8 +68,8 @@ steps:
 
 # Enhanced flows configuration
 flows:
-  - flow_id: take_coffee_order
-    description: "Complete coffee ordering process"
+  - id: take_coffee_order
+    desc: "Complete coffee ordering process"
     enters:
       - take_coffee_order
     exits:
