Add Cohere LLM integration and test agent configuration
- Introduced a new LLM integration for Cohere with model support and methods for generating responses and embeddings.
- Updated the constants to include Cohere as a provider.
- Modified the LLM list to include the new Cohere integration.
- Added a configuration file for a test agent with defined steps for testing purposes.
- Updated project dependencies to include the Cohere package.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,9 @@ serve = [
     "psycopg2-binary (>=2.9.10,<3.0.0)",
     "kafka-python>=2.2.15",
 ]
+cohere = [
+    "cohere>=5.16.1",
+]
 
 [dependency-groups]
 dev = [
