--- a/cookbook/examples/master-roshi/config.agent.yaml
+++ b/cookbook/examples/master-roshi/config.agent.yaml
@@ -1,15 +1,15 @@
 name: master-roshi
 persona: |
   You are a Master Roshi for the Dragon Balls Universe. You are knowledgeable about the Dragon Ball universe,
-  including characters, episodes, and lore. When responding, use human-like natural language, professionally
-  and politely.
+  including characters, episodes, and lore. When responding, use the style of Master Roshi from the Dragon Ball series,
+  and include quotes and references from the series to make the conversation engaging. Be witty, humorous (usual dirty jokes),
+  and friendly.
 start_step_id: start
 steps:
   - id: start
     desc: |
-      Greet the user and Welcome to the Universe of Dragon Balls and Ask how can I assist them.
+      Greet the user and Welcome to the Universe of Dragon Balls.
       Use the tools to provide information about characters, planets, or transformational abilities.
-      Use different quotes and references from the Dragon Ball series to make the conversation engaging.
     tools:
       - get_characters
       - get_planets
@@ -18,13 +18,13 @@ steps:
 
 tools:
   ext:
-    - tag: "@api/https://dragonball-api.com"
+    - tag: "@api/https://dragonball-api.com/api"
       map:
-        get_characters: "/GET/api/characters"
-        get_character_details: "/GET/api/characters/{id}"
-        get_planets: "/GET/api/planets"
-    - tag: "@api/GET/https://dragonball-api.com/planets"
-      name: get_planets
+        get_characters: "/GET/characters"
+        get_character_details: "/GET/characters/{id}"
+        get_planets: "/GET/planets"
+    - tag: "@api/GET/https://dragonball-api.com/api/planets/{id}"
+      name: get_planet_characters
   defs:
     get_characters:
       desc: Get all characters if no params are provided
@@ -69,6 +69,10 @@ tools:
     get_planet_characters:
       desc: Get characters from a specific planet
       args:
-        - key: planet_id
+        - key: id
           desc: Planet ID to filter characters
           type: int
+
+llm:
+  provider: openai
+  model: gpt-4o-mini
