--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,10 @@ cli = [
 mcp = ["fastmcp (>=2.7.1)"]
 anthropic = ["anthropic (>=0.55.0,<0.56.0)"]
 openai = ["openai (>=1.76.0,<2.0.0)", "tiktoken (>=0.9.0,<0.10.0)"]
-mistralai = ["mistralai (>=1.7.0,<2.0.0)"]
+mistralai = [
+    "instructor>=1.9.2",
+    "mistralai (>=1.7.0,<2.0.0)",
+]
 google = ["google-genai (>=1.12.1,<2.0.0)"]
 ollama = ["ollama (>=0.5.1)"]
 huggingface = ["huggingface_hub (>=0.32.0)"]
