feat: update Dockerfiles to use the latest Nomos image and remove unnecessary print statement in Mistral integration

--- a/cookbook/examples/barista/Dockerfile
+++ b/cookbook/examples/barista/Dockerfile
@@ -1,4 +1,4 @@
-FROM nomos
+FROM ghcr.io/dowhiledev/nomos:latest
 WORKDIR /app
 COPY config.agent.yaml /app/config.agent.yaml
 COPY barista_tools.py /app/barista_tools.py
