refactor: move dev-dependencies to tool.uv section in pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,16 +63,6 @@ cohere = [
     "cohere>=5.16.1",
 ]
 
-[dependency-groups]
-dev = [
-    "pytest (>=8.3.5,<9.0.0)",
-    "pytest-cov (>=6.1.1,<7.0.0)",
-    "pytest-asyncio (>=0.26.0,<0.27.0)",
-    "pre-commit (>=4.2.0,<5.0.0)",
-    "ruff>=0.12.2",
-    "pytest-xdist>=3.8.0",
-]
-
 [project.scripts]
 nomos = "nomos.cli:main"
 
@@ -80,6 +70,16 @@ nomos = "nomos.cli:main"
 minversion = "7.0"
 addopts = "-ra -q --cov=nomos --cov-report=term-missing"
 testpaths = ["tests"]
+
+[tool.uv]
+dev-dependencies = [
+    "pytest (>=8.3.5,<9.0.0)",
+    "pytest-cov (>=6.1.1,<7.0.0)",
+    "pytest-asyncio (>=0.26.0,<0.27.0)",
+    "pre-commit (>=4.2.0,<5.0.0)",
+    "ruff>=0.12.2",
+    "pytest-xdist>=3.8.0",
+]
 
 [tool.ruff]
 lint.extend-select = ["I"]
