--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ dependencies = [
     "colorama (>=0.4.6,<0.5.0)",
     "greenlet>=3.2.3",
     "numpy>=2.2.6",
-    "httpx (>=0.27.0,<0.28.0)",
+    "httpx>=0.28.1",
 ]
 
 [tool.uv]
